--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,16 @@ body {
 p {
 	margin: 0;
 }
+
+::-webkit-scrollbar {
+	width: 0.4vw;
+}
+
+::-webkit-scrollbar-track {
+	background-color: #000000;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #ffffff;
+	/* background-image: linear-gradient(43deg, #4158d0 0%, #c850c0 46%, #ffcc70 100%); */
+}
