--- a/src/components/ContactSites/ContactSites.css
+++ b/src/components/ContactSites/ContactSites.css
@@ -10,7 +10,8 @@
 	width: 50px;
 	border-radius: 20px;
 	box-shadow: 0px 0px 0px 2px white;
-	margin-right: 1em;
+	margin-left: 0.5em;
+	margin-right: 0.5em;
 	display: flex;
 	align-items: center;
 	transition: width 1s ease;
