--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body {
-	background-color: rgb(20, 20, 20);
+	background: linear-gradient(300deg, #119b73, #0a4635, #01261c);
+	background-size: 120% 120%;
+	animation: gradient-animation 10s ease infinite;
+	height: 100vh;
 }
 
 .App {
@@ -23,5 +26,16 @@ p {
 
 ::-webkit-scrollbar-thumb {
 	background-color: #ffffff;
-	/* background-image: linear-gradient(43deg, #4158d0 0%, #c850c0 46%, #ffcc70 100%); */
+}
+
+@keyframes gradient-animation {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
